Fix scene start end modifications
